adminer/manifest/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
spec:
  ports:
  - port: 8080
    name: http
  clusterIP: None
  selector:
    app: adminer
